# anomaly-detection

./: .gitignore  docker-compose.yml  docker_deploy.ps1  docker_deploy.sh  export_data.ps1  finnhub15min.csv  rebuild_container.ps1
ProcessorSpark/: Dockerfile  requirements.txt
ProcessorSpark/sandbox/: explore_anomalies.ipynb  explore_data.ipynb  isolation_forest.ipynb
ProcessorSpark/spark/: Dockerfile  pom.xml
cassandra/: setup-cassandra.cql
detect-anomalies/: Dockerfile  README.md  pyproject.toml  requirements.txt
detect-anomalies/conf/base/: parameters.yml
detect-anomalies/notebooks/autoencoder/: data_simulator.py  dev_autoencoder.ipynb  requirements.txt
detect-anomalies/notebooks/isolation_forest/: dev_isolation_forest.ipynb  requirements.txt
detect-anomalies/src/detect_anomalies/: __init__.py  __main__.py  pipeline_registry.py  settings.py
detect-anomalies/src/detect_anomalies/pipelines/anomaly_detection/: config.json  nodes.py  pipeline.py
detect-anomalies/src/detect_anomalies/pipelines/anomaly_detection/schemas/: trades.avsc
grafana/dashboards/: dashboard.json
isolation-forest/: build.sbt
kafka/: setup-kafka.sh
producer/: Dockerfile  Dockerfile.server  requirements.txt  requirements_fake.txt  send_anomaly_signal.py
producer/src/: ProducerClass.py  config.json  (+3 more)
sandbox/: eval_results.ipynb  eval_spark_methods.ipynb  explore_anomalies.ipynb  explore_data.ipynb  explore_historical.ipynb  make_anomalies.ipynb  methods_from_spark.py  one_class_svm.ipynb  pandas_analysis.py  prepare_data_for_eval.ipynb
spark/: Dockerfile  requirements.txt
(+15 files in other folders)
